# t20

./: .analyzer_options.yaml  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  demo.t20  int.dart  int.dart.dill  pubspec.yaml  t20
.github/ISSUE_TEMPLATE/: bug_report.md
doc/: Makefile  t20.bib  t20.tex
lib/: settings.dart  t20_api.dart
lib/src/: backend_compiler.dart  bootstrap.dart  builtins.dart  compilation_unit.dart  compiler_constants.dart  deriving.dart  either.dart  fp.dart  frontend_compiler.dart  immutable_collections.dart  location.dart  module_environment.dart  option.dart  pipeline.dart  result.dart  string_pool.dart  unicode.dart  unionfind.dart  utils.dart
lib/src/ast/: algebra.dart  ast.dart  (+17 more)
scratchpad/: async.ss  basics.t20  dart-list.t20  datatype.ss  demo.t20  kernel.t20
tests/: hello.t20
tests/eval/: arithmetics.t20  hello.t20  iterate.t20  match_integers.t20  match_list.t20  show_list.t20
tests/sexp/: comments.t20  stringliterals.t20
tools/: kernel_eliminator.dart  prototype.dart  run-tests  run-tests.dart  update-pubspec
tools/avl-tree/: avl.dart
tools/immutable-collections/: list.dart  redblack.dart
tools/pcf/: pcf.dart
tools/platform/: build_platform  custom_platform.dart  custom_platform.dart.dill  kernel_bottomup_folder.dart  kernel_match_closure.dart  pubspec.yaml  t20_platform.dill  t20_runtime.dart  test_bottomup_folder.dart  visitor1.dart
tools/unicode-table/: LICENSE  stack.yaml  unicode-table.cabal
tools/unicode-table/src/: Main.hs
tools/unionfind/: unionfind.dart
(+91 files in other folders)
