name:                unicode-table
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dhil/t20/tools/unicode-table#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Hillerström
maintainer:          hillerstrom@google.com
copyright:           2018 the Dart project authors
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable unicode-table
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       unicode-names,
                       time,
                       split
